Refactored how the phrase extracted for sentiment analysis is processed. Removed some useless code.